# bevy

./: Cargo.toml
crates/bevy_gizmos/src/: lib.rs  light.rs  pipeline_3d.rs
crates/bevy_gltf/: Cargo.toml
crates/bevy_internal/: Cargo.toml
crates/bevy_internal/src/: default_plugins.rs
crates/bevy_pbr/: Cargo.toml
crates/bevy_pbr/src/: lib.rs  plugin.rs  render.rs  wireframe.rs
crates/bevy_render_3d/: Cargo.toml  README.md
crates/bevy_render_3d/src/: dummy_meshlet.rs  lib.rs
crates/bevy_render_3d/src/atmosphere/: atmosphere.rs  mod.rs  sky.rs
crates/bevy_render_3d/src/atmosphere/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/cluster/: cluster.rs  clusterable_objects.rs  mod.rs  test.rs
crates/bevy_render_3d/src/cluster/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/decal/: mod.rs
crates/bevy_render_3d/src/decal/clustered/: decals.rs  mod.rs  systems.rs
crates/bevy_render_3d/src/decal/forward/: decals.rs  forward_decal.wgsl  mod.rs
crates/bevy_render_3d/src/deferred/: mod.rs  render.rs
crates/bevy_render_3d/src/deferred/plugin/: deferred_functions.wgsl  deferred_types.wgsl  mod.rs  systems.rs
crates/bevy_render_3d/src/distance_fog/: fog.rs  mod.rs
crates/bevy_render_3d/src/distance_fog/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/extended_material/: mod.rs  pipeline.rs
crates/bevy_render_3d/src/gpu_preprocess/: mod.rs  render.rs  systems.rs
crates/bevy_render_3d/src/light/: ambient_light.rs  directional_light.rs  light_consts.rs  mod.rs  render.rs  spot_light.rs
crates/bevy_render_3d/src/light/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/light/point_light/: cubemap.rs  mod.rs
crates/bevy_render_3d/src/light/shadow/: cascade.rs  map.rs  mod.rs
crates/bevy_render_3d/src/light_probe/: environment_map.rs  irradiance_volume.rs  light_probes.rs  mod.rs
crates/bevy_render_3d/src/light_probe/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/lightmap/: lightmap.rs  mod.rs
crates/bevy_render_3d/src/lightmap/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/material/: bindless.rs  commands.rs  material.rs  mod.rs  non_bindless.rs
crates/bevy_render_3d/src/material/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/mesh_pipeline/: commands.rs  graph.rs  mod.rs  render_method.rs  specialization.rs  systems.rs
crates/bevy_render_3d/src/mesh_pipeline/render/: instance.rs  mod.rs  pipeline.rs
crates/bevy_render_3d/src/meshlet/: asset.rs  from_mesh.rs  graph.rs  mod.rs  render.rs
crates/bevy_render_3d/src/meshlet/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/morph/: data.rs  mod.rs  systems.rs
crates/bevy_render_3d/src/prepass/: commands.rs  mod.rs  render.rs
crates/bevy_render_3d/src/prepass/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/shadow/: mod.rs  phase_item.rs  render.rs
crates/bevy_render_3d/src/shadow/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/skin/: mod.rs  systems.rs  uniforms.rs
crates/bevy_render_3d/src/ssao/: mod.rs  ssao.rs
crates/bevy_render_3d/src/ssao/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/ssr/: mod.rs  render.rs
crates/bevy_render_3d/src/ssr/plugin/: mod.rs  systems.rs
crates/bevy_render_3d/src/volumetric_fog/: mod.rs  render.rs
crates/bevy_render_3d/src/volumetric_fog/plugin/: mod.rs  systems.rs
crates/bevy_state/src/: state_scoped.rs
crates/bevy_transform/: Cargo.toml
examples/3d/: negative_scale.rs
tests/: empty_variable_curve.rs
(+6 files in other folders)
