[package]
name = "bevy_render_3d"
version = "0.16.0-dev"
edition = "2024"
description = "Provides functionality for Bevy Engine for rendering in 3d"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
libm = ["bevy_math/libm"]

webgl = []
webgpu = []
shader_format_glsl = []

trace = ["bevy_render/trace"]

# Enables the meshlet renderer for dense high-poly scenes (experimental)
meshlet = [
  "dep:bevy_tasks",
  "dep:half",
  "dep:lz4_flex",
  "dep:range-alloc",
  "dep:thiserror",
]
meshlet_processor = [
  "meshlet",
  "dep:bitvec",
  "dep:itertools",
  "dep:meshopt",
  "dep:metis",
]

pbr_transmission_textures = []
pbr_multi_layer_material_textures = []
pbr_anisotropy_texture = []
pbr_specular_textures = []
experimental_pbr_pcss = []

[dependencies]
bevy_app = { path = "../bevy_app", version = "0.16.0-dev", default-features = false }
bevy_asset = { path = "../bevy_asset", version = "0.16.0-dev", default-features = false }
bevy_color = { path = "../bevy_color", version = "0.16.0-dev", default-features = false }
bevy_core_pipeline = { path = "../bevy_core_pipeline", version = "0.16.0-dev", default-features = false }
bevy_derive = { path = "../bevy_derive", version = "0.16.0-dev", default-features = false }
bevy_diagnostic = { path = "../bevy_diagnostic", version = "0.16.0-dev", default-features = false }
bevy_ecs = { path = "../bevy_ecs", version = "0.16.0-dev", default-features = false }
bevy_image = { path = "../bevy_image", version = "0.16.0-dev", default-features = false }
bevy_math = { path = "../bevy_math", version = "0.16.0-dev", default-features = false, features = [
  "std",
] }
bevy_mesh = { path = "../bevy_mesh", version = "0.16.0-dev", default-features = false }
bevy_platform_support = { path = "../bevy_platform_support", version = "0.16.0-dev", default-features = false }
bevy_reflect = { path = "../bevy_reflect", version = "0.16.0-dev", default-features = false }
bevy_render = { path = "../bevy_render", version = "0.16.0-dev", default-features = false }
bevy_tasks = { path = "../bevy_tasks", version = "0.16.0-dev", default-features = false, optional = true }
bevy_transform = { path = "../bevy_transform", version = "0.16.0-dev", default-features = false }
bevy_utils = { path = "../bevy_utils", version = "0.16.0-dev", default-features = false }

bitflags = "2.3"
bytemuck = { version = "1", features = ["derive", "must_cast"] }
derive_more = { version = "1", default-features = false, features = ["from"] }
fixedbitset = "0.5"
nonmax = "0.5"
offset-allocator = "0.2"
smallvec = "1.6"
static_assertions = "1"
tracing = { version = "0.1", default-features = false, features = ["std"] }

# meshlet
bitvec = { version = "1", optional = true }
half = { version = "2", features = ["bytemuck"], optional = true }
itertools = { version = "0.14", optional = true }
lz4_flex = { version = "0.11", default-features = false, features = [
  "frame",
], optional = true }
meshopt = { version = "0.4.1", optional = true }
metis = { version = "0.2", optional = true }
range-alloc = { version = "0.1.3", optional = true }
thiserror = { version = "2", default-features = false, optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
